--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Gulp Example</h1>
-    <script src="js/file1.js" charset="utf-8"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
